	Postgresql 7.3 has no support for not SQL standard type 'datetime'.  
*****	If you are upgrading from	a previous Sympa version, you should update 
*****	your sympa DB as follows : 
*****	ALTER TABLE subscriber_table CHANGE date_subscriber timestamp with time zone NOT NULL; 
*****	ALTER TABLE subscriber_table CHANGE update_subscriber timestamp with time zone;

	src/task_manager.pl: Fix problems with REMIND task, it has been	reactivated

	Makefile.am, Makefile.in, wwsympa/archived.pl: Create 'arc_path' directory if not created ; 
	also check access

	doc/: Now all path in documentation use	XXXDIR variables.  This should be used by packagers 
	to do a "make documentation" so the documentation refer to correct path.

	src/etc/sample/Makefile: install sample liste in sampledir instead of expldir

	[G. Paressant]: New sympa.spec and build procedure for Mandrake.  New parameters are 
	available in configure : with-etcdir, with-nlsdir, with-scriptdir, with-sampledir,
	with-spooldir,with-docdir. Documentation is now installed.

	src/etc/script/arc2webarc.pl: [proposed by A. Bernstein] : make the script VRobot-compatible

	src/etc/topics.conf: ignore topics if no topics.conf was found. 
	Also install a default topics.conf

	src/tools.pl: Change: extend escaped characters in URLs.  JC Delepine has reported a 
	problem with 0xB0 char not escaped in document repository

   Bug fixes :

	src/List.pm: [reported by A. Delvaux] Fix: incorrect format of List-ID header field
	
	src/Makefile: Fix: Aliaswraper was installed with wrong	attributes (sympa instead of root). 
	Could not run newaliases

	src/sympa_wizard.pl: [reported by cm AT coretec.at] : sympa_wizard created sympa.conf 
	with old parameter 'trusted_ca_options'

	wwsympa/wwsympa.fcgi: [reported by H. S. Rai] Links in summaries failed if message-id contained 
	a dash ('-'). Mhonarc escapes these chars in HTML messages.

	wwsympa/wwsympa.fcgi: also escape () in arcsearch_id. Also escape these chars in arcsearch
