@@ -1948,7 +1948,7 @@ sub send_msg {
     my $name = $self->{'name'};
     my $robot = $self->{'domain'};
     my $admin = $self->{'admin'};
-    my $total = $self->{'total'};
+    my $total = $self->get_total('nocache');
     my $sender_line = $hdr->get('From');
     my @sender_hdr = Mail::Address->parse($sender_line);
     my %sender_hash;
@@ -2745,8 +2745,12 @@ sub get_user_db {
 
     my $statement;
  
+    my $option = shift;
     unless ($List::use_db) {
 	&do_log('info', 'Sympa not setup to use DBI');
+    if ($option eq 'nocache') {
+	$self->{'total'} = _load_total_db($self->{'name'});
+    }
 	return undef;
     }
 
